--- a/clase1.html
+++ b/clase1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -99,7 +99,7 @@
       <img src="./logos/logo_yard_sale.svg" alt="logo" class="logo">
 
       <h1 class="title">Create a new password</h1>
-      <p class="subtitle">Enter a new passwrd for yue account</p>
+      <p class="subtitle">Enter a new password for yue account</p>
 
       <form action="/" class="form">
         <label for="password" class="label">Password</label>
