--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     </div>
   </nav>
 
-  <aside class="product-detail inactive">
+  <aside id="shoppingCartContainer" class="inactive">
     <div class="title-container">
       <img src="./icons/flechita.svg" alt="arrow">
       <p class="title">My order</p>
@@ -156,8 +156,8 @@
     </div>
   </div>
   </aside>
-  <!--
-  <aside class="product-detail">
+   
+  <aside id="productDetail" class="inactive">
     <div class="product-detail-close">
       <img src="./icons/icon_close.png" alt="close">
     </div>
@@ -172,7 +172,7 @@
       </button>
     </div>
   </aside>
-  -->
+   
   <section class="main-container">
     <div class="cards-container">
       <!-- lugar donde se pinta la lista de productos-->
